nginx-deployment-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dpl
  labels:
    app: nginx-dpl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-dpl
  template:
    metadata:
      labels:
        app: nginx-dpl
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
