ingress-with_multiple_paths.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: my-app-subdomain-ingress
spec:
 rules:
 - host: my-app.com
   http:
    paths: 
     path: /about
     backend:
        serviceName: my-app-about-service
        servicePort: 3030
      path: /dashboard
      backend:
       serviceName: my-app-dashboard-service
       servicePort: 8080
