my-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: my-ingress
spec:
  rules:
  - host: my-app.com
    http:
     paths:
     - backend:
        serviceName: my-app-service
        servicePort: 8080
